--- a/talks/learn-from-go/index.html
+++ b/talks/learn-from-go/index.html
@@ -265,7 +265,7 @@ func main() {
             <small class="fragment">... now we can argue which code style to choose :)</small>
         </section>
 
-       <!-- <section>
+       <section>
             <h2>Reproducible Builds</h2>
             <p><code>go.sum</code><br>
                 built-in guarantee of <strong>determinism and integrity</strong>.</p>
@@ -308,7 +308,7 @@ golang.org/x/net v0.26.0/go.mod h1:Kf8...
                 Go verifies history.”
             </blockquote>
             <p><strong>Reproducibility by default</strong>, not by configuration.</p>
-        </section>-->
+        </section>
 
         <section>
             <h3>Strong Focus on Pragmatism</h3>
