--- a/talks/workshop/distributed-systems-challenges/index.html
+++ b/talks/workshop/distributed-systems-challenges/index.html
@@ -78,8 +78,35 @@
         </section>
 
         <section>
+            <img src="img/packet-loss.jpeg" width="40%"/>
+            <br>
+            <small><small><a href="https://en.wikipedia.org/wiki/IP_over_Avian_Carriers">https://en.wikipedia.org/wiki/IP_over_Avian_Carriers</a></small></small>
+        </section>
+
+        <section>
             <p><strong>Rule:</strong> In the presence of a network partition, a distributed system must choose either
                 <em>Consistency</em> or <em>Availability</em>.</p>
+        </section>
+
+        <section>
+            <h2>The Two Generals Problem</h2>
+        </section>
+
+        <section>
+            <h3>The Scenario</h3>
+            <p>Two generals are planning to attack a city. They can only communicate via messengers, who may be captured.</p>
+
+            <div class="fragment">
+                <p>
+                    How can both generals be sure they attack at the same time, given that messages might not arrive?
+                </p>
+            </div>
+        </section>
+
+        <section>
+            <p>
+                There is <strong>no deterministic way</strong> for two parties to <strong>coordinate</strong> over an unreliable communication channel.
+            </p>
         </section>
 
         <section>
