--- a/talks/magicians-handbook/index.html
+++ b/talks/magicians-handbook/index.html
@@ -278,6 +278,26 @@
         </section>
 
         <section>
+            <h3>#1: H2 on prod</h3>
+        </section>
+
+        <section>
+            <h3>#2: Transaction deadlocks after Hibernate upgrade</h3>
+        </section>
+
+        <section>
+            <h3>#3: <em>@Transactional</em> silently not working</h3>
+        </section>
+
+        <section>
+            <h3>#4: Dependency injection cycle in a bean with... no dependencies</h3>
+        </section>
+
+        <section>
+            <h3>#5: Non-deterministic classloaders</h3>
+        </section>
+
+        <section>
             <h2>Key Takeaways</h2>
             <ul>
                 <li>Spring magic = proxies + reflection + bytecode tricks</li>
