--- a/talks/magicians-handbook/index.html
+++ b/talks/magicians-handbook/index.html
@@ -308,7 +308,12 @@
         </section>
 
         <section>
-            <h2>Questions?</h2>
+            <blockquote>"Regarding opinionated / unopinionated frameworks, I think they appeal to different types
+                of developers. I now have 20 years of experience. In my first 5-8 years I loved frameworks like
+                Spring. However, as I gained more experience, I felt I needed a framework's "opinion" less and
+                less. Now I avoid them."
+            </blockquote>
+            <small>https://www.infoq.com/news/2018/10/the-road-to-micronaut-1.0</small>
         </section>
 
         <section>
@@ -316,6 +321,12 @@
                 Using common sense is the ultimate Best Practice™.
             </blockquote>
         </section>
+
+        <section>
+            <h2>Questions?</h2>
+        </section>
+
+
         <section>
             <h2>Thank You!</h2>
 
