--- a/talks/magicians-handbook/index.html
+++ b/talks/magicians-handbook/index.html
@@ -286,6 +286,17 @@
         </section>
 
         <section>
+            <img src="img/jpabug.png" width="45%"/>
+            <img src="img/jpabug2.png" width="45%"/>
+            <br>
+            <small>source: <a href="https://x.com/maciejwalkowiak/status/1798727759918997982">https://x.com/maciejwalkowiak/status/1798727759918997982</a></small>
+        </section>
+
+        <section>
+            <img src="img/plain-sql.png" width="60%"/>
+        </section>
+
+        <section>
             <h3>#3: <em>@Transactional</em> silently not working</h3>
         </section>
 
