--- a/talks/workshop/distributed-systems-challenges/index.html
+++ b/talks/workshop/distributed-systems-challenges/index.html
@@ -51,13 +51,13 @@
                     <circle cx="240" cy="245" r="20" class="node"/>
                     <circle cx="95" cy="200" r="20" class="node"/>
 
-                    <path id="pAB" class="link" d="M95 65 L260 50"/>
-                    <path id="pBC" class="link" d="M260 50 L430 95"/>
-                    <path id="pCD" class="link" d="M430 95 L380 230"/>
-                    <path id="pDE" class="link" d="M380 230 L240 245"/>
-                    <path id="pEF" class="link" d="M240 245 L95 200"/>
-                    <path id="pFA" class="link" d="M95 200 L95 65"/>
-                    <path id="pBE" class="link" d="M260 50 L240 245"/>
+                    <path id="pAB" class="link" d="M115 62 L240 53"/>
+                    <path id="pBC" class="link" d="M280 53 L410 86"/>
+                    <path id="pCD" class="link" d="M419 112 L391 213"/>
+                    <path id="pDE" class="link" d="M360 230 L260 245"/>
+                    <path id="pEF" class="link" d="M220 241 L115 205"/>
+                    <path id="pFA" class="link" d="M95 180 L95 85"/>
+                    <path id="pBE" class="link" d="M257 70 L243 225"/>
 
                     <circle r="4" class="msg"><animateMotion dur="2.0s" repeatCount="indefinite"><mpath href="#pAB"/></animateMotion></circle>
                     <circle r="4" class="msg"><animateMotion dur="3.4s" repeatCount="indefinite"><mpath href="#pAB"/></animateMotion></circle>
@@ -85,7 +85,7 @@
 
             <br>
             <h4><a href="https://pivovarit.github.io">Grzegorz Piwowarek</a></h4>
-            <h5><a href="https://twitter.com/pivovarit">@pivovarit</a></h5>
+            <h5><a href="https://twitter.com/pivovarit">@pivowarit</a></h5>
         </section>
 
 
